Fix spacing

--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 90px;
 }
 
 @media (width >= 800px) {
@@ -36,4 +36,18 @@
         justify-content: space-evenly;
         padding: 0 30px;
     }
+}
+
+h3 {
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+p {
+    max-width: 80%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    line-height: 1.6;
 }
