--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -21,6 +21,10 @@
     flex-wrap: wrap;
     row-gap: 40px;
     max-width: 26ch;
+
+    p {
+      max-width: max-content;
+    }
   }
   
   hr {
@@ -37,6 +41,7 @@
       gap: 30px;
   
       p {
+        max-width: max-content;
         font-size: 20px;
       }
     }
